# fast-captchax

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
fast_captchax/: __init__.py  captchax.py  generator.py  memory.py  redis.py  store.py
