[tool.poetry]
name = "fast-captchax"
version = "0.1.0"
description = ""
authors = ["Chongchen Chen <chenkovsky@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
captchax = "^0.1.0"
fastapi = ">=0.110.0"
redis = ">=5.0.0"
python-multipart = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venvPath = "."
venv = ".venv"
